finish backport to fabric/forge 1.16.5